added search bar and fixed some html

--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
   <body>
     <div class="box">
       <div class="logo">
-        <h1>Nextdoor Neighbor</h1>
-        <h5>Your Neighbors create:</h5> 
-            <form></form>
+        <h5>Search Local Businesses In Any City.</h5> 
+        <form>
+            <input class="input" type="search" placeholder="City, State, Zip">
+            <input class="submit" type="submit" value="Submit">
+        </form>
       </div>
       <div class="figure">
       </div>
