--- a/index2.html
+++ b/index2.html
@@ -26,7 +26,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="public/stylesheets/style.css" />
-    <title>Nextdoor Neighbor</title>
+    <title>Nextdoor Neighbor!</title>
   </head>
   <body>
     <div class="box">
