laurens updated front end

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       crossorigin="anonymous"
     ></script>
     <link href="https://fonts.googleapis.com/css?family=Lato:100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="public/stylesheets/style.css" />
+    <link rel="stylesheet" href="./public/stylesheets/style.css" />
     <title>Nextdoor Neighbor</title>
   </head>
 
@@ -40,9 +40,9 @@
     <div class="row box">
       <div class="col-12 top">
         <nav class="nav links">
-          <a class="nav-link" href="index.html"><i class="fas fa-home"></i></a>
-          <a class="nav-link" href="./public/login.html">Login</a>
-          <a class="nav-link" href="./public/register.html">Register</a>
+            <a class="nav-link" href="index.html"><i class="fas fa-home"></i></a>
+            <a class="nav-link" href="./public/login.html">Login/Sign Up</a>
+            <a class="nav-link" href="./public/register.html">Register Your Business</a>
         </nav>
       </div>
 
@@ -68,6 +68,41 @@
           <input class="input" type="search" placeholder="City, State, Zip" />
           <input class="submit" type="submit" value="Submit" />
         </form>
+  <input type="checkbox" 
+         class="checkbox" 
+         id="checkbox-1"/>
+ <label for="checkbox-1" 
+        class="checkbox-click-target">
+   <span class="checkbox-box"></span>Retail
+ </label>
+    <input type="checkbox" 
+         class="checkbox" 
+         id="checkbox-2"/>
+ <label for="checkbox-2" 
+        class="checkbox-click-target">
+   <span class="checkbox-box"></span>Beauty
+ </label>
+    <input type="checkbox" 
+         class="checkbox" 
+         id="checkbox-3" 
+ <label for="checkbox-3" 
+        class="checkbox-click-target">
+   <span class="checkbox-box"></span>Restaurant
+ </label>
+ <input type="checkbox" 
+         class="checkbox" 
+         id="checkbox-3" 
+ <label for="checkbox-3" 
+        class="checkbox-click-target">
+   <span class="checkbox-box"></span>Grocery
+ </label>
+ <input type="checkbox" 
+         class="checkbox" 
+         id="checkbox-3" 
+ <label for="checkbox-3" 
+        class="checkbox-click-target">
+   <span class="checkbox-box"></span>All
+ </label>
       </div>
       
   
