added search button variables

--- a/index.html
+++ b/index.html
@@ -70,35 +70,35 @@
         </form>
   <input type="checkbox" 
          class="checkbox" 
-         id="checkbox-1"/>
+         id="retail"/>
  <label for="checkbox-1" 
         class="checkbox-click-target">
    <span class="checkbox-box"></span>Retail
  </label>
     <input type="checkbox" 
          class="checkbox" 
-         id="checkbox-2"/>
+         id="beauty"/>
  <label for="checkbox-2" 
         class="checkbox-click-target">
    <span class="checkbox-box"></span>Beauty
  </label>
     <input type="checkbox" 
          class="checkbox" 
-         id="checkbox-3" 
+         id="restaurant" 
  <label for="checkbox-3" 
         class="checkbox-click-target">
    <span class="checkbox-box"></span>Restaurant
  </label>
  <input type="checkbox" 
          class="checkbox" 
-         id="checkbox-3" 
+         id="grocery" 
  <label for="checkbox-3" 
         class="checkbox-click-target">
    <span class="checkbox-box"></span>Grocery
  </label>
  <input type="checkbox" 
          class="checkbox" 
-         id="checkbox-3" 
+         id="all" 
  <label for="checkbox-3" 
         class="checkbox-click-target">
    <span class="checkbox-box"></span>All
