added login/signup page

--- a/public/register.html
+++ b/public/register.html
@@ -40,7 +40,7 @@
 
 
 <body>
-        <div class="row box">
+        <div class="row box1">
                 <div class="col-12 top">
                   <nav class="nav links">
                       <a class="nav-link" href="index.html"><i class="fas fa-home"></i></a>
