--- a/index.html
+++ b/index.html
@@ -41,14 +41,11 @@
       <div class="col-12 top">
         <nav class="nav links">
             <a class="nav-link" href="index.html"><i class="fas fa-home"></i></a>
-            <a class="nav-link" href="./public/login.html">Login/Sign Up</a>
+            <a class="nav-link" href="/login">Login/Sign Up</a>
             <a class="nav-link" href="./public/register.html">Register Your Business</a>
         </nav>
       </div>
 
-      <div class="col-12 title">
-        <h1>Nextdoor Neig<i class="fas fa-home"></i>bor</h1>
-      </div>
 
       <div class="col widget1"
           <h3>Where Our<br />Neighbors Make:</h3>
