--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
         <h1>Nextdoor Neig<i class="fas fa-home"></i>bor</h1>
       </div>
 
-      <div class="col widget1"
+      <div class="col widget1">
           <h3>Where Our<br />Neighbors Make:</h3>
       </div>
       <div class="col widget2">
           <p>
-              <span class="word">Beauty Products</span>
-              <span class="word">Cocktails</span>
-              <span class="word">Food</span>
-              <span class="word">Fashion</span>
-            </p>
+            <span class="word">Beauty Products</span>
+            <span class="word">Cocktails</span>
+            <span class="word">Food</span>
+            <span class="word">Fashion</span>
+          </p>
       </div>
 
       <div class="col-12 search">
@@ -68,44 +68,27 @@
           <input class="input" type="search" placeholder="City, State, Zip" />
           <input class="submit" type="submit" value="Submit" />
         </form>
-  <input type="checkbox" 
-         class="checkbox" 
-         id="retail"/>
- <label for="checkbox-1" 
-        class="checkbox-click-target">
-   <span class="checkbox-box"></span>Retail
- </label>
-    <input type="checkbox" 
-         class="checkbox" 
-         id="beauty"/>
- <label for="checkbox-2" 
-        class="checkbox-click-target">
-   <span class="checkbox-box"></span>Beauty
- </label>
-    <input type="checkbox" 
-         class="checkbox" 
-         id="restaurant" 
- <label for="checkbox-3" 
-        class="checkbox-click-target">
-   <span class="checkbox-box"></span>Restaurant
- </label>
- <input type="checkbox" 
-         class="checkbox" 
-         id="grocery" 
- <label for="checkbox-3" 
-        class="checkbox-click-target">
-   <span class="checkbox-box"></span>Grocery
- </label>
- <input type="checkbox" 
-         class="checkbox" 
-         id="all" 
- <label for="checkbox-3" 
-        class="checkbox-click-target">
-   <span class="checkbox-box"></span>All
- </label>
+        <input type="checkbox" class="checkbox" id="retail">
+          <label for="checkbox-1" class="checkbox-click-target">
+          <span class="checkbox-box"></span>Retail
+        </label>
+        <input type="checkbox" class="checkbox" id="beauty">
+          <label for="checkbox-2" class="checkbox-click-target">
+          <span class="checkbox-box"></span>Beauty
+        </label>
+        <input type="checkbox" class="checkbox" id="restaurant">
+          <label for="checkbox-3" class="checkbox-click-target">
+          <span class="checkbox-box"></span>Restaurant
+        </label>
+        <input type="checkbox" class="checkbox" id="grocery"> 
+          <label for="checkbox-3" class="checkbox-click-target">
+          <span class="checkbox-box"></span>Grocery
+        </label>
+        <input type="checkbox" class="checkbox" id="all">
+          <label for="checkbox-3" class="checkbox-click-target">
+          <span class="checkbox-box"></span>All
+        </label>
       </div>
-      
-  
     </div>
 
     
