--- a/public/register.html
+++ b/public/register.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Passport Authentication</title>
+  <title>Register Your Business</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link
@@ -48,7 +48,7 @@
                       <a class="nav-link" href="/public/register.html">Register Your Business</a>
                   </nav>
                 </div>
-
+         
             </div>
 
 
