added clicks to map

--- a/index.html
+++ b/index.html
@@ -62,44 +62,10 @@
       <div class="col-12 search">
         <h4>Search Local Businesses In Any City.</h4>
         <form>
-          <input class="input" type="search" placeholder="City, State, Zip" />
+          <input class="input" type="search" placeholder="Type In A City" />
           <input class="submit" type="submit" value="Submit" />
         </form>
-  <input type="checkbox" 
-         class="checkbox" 
-         id="retail"/>
- <label for="checkbox-1" 
-        class="checkbox-click-target">
-   <span class="checkbox-box"></span>Retail
- </label>
-    <input type="checkbox" 
-         class="checkbox" 
-         id="beauty"/>
- <label for="checkbox-2" 
-        class="checkbox-click-target">
-   <span class="checkbox-box"></span>Beauty
- </label>
-    <input type="checkbox" 
-         class="checkbox" 
-         id="restaurant" 
- <label for="checkbox-3" 
-        class="checkbox-click-target">
-   <span class="checkbox-box"></span>Restaurant
- </label>
- <input type="checkbox" 
-         class="checkbox" 
-         id="grocery" 
- <label for="checkbox-3" 
-        class="checkbox-click-target">
-   <span class="checkbox-box"></span>Grocery
- </label>
- <input type="checkbox" 
-         class="checkbox" 
-         id="all" 
- <label for="checkbox-3" 
-        class="checkbox-click-target">
-   <span class="checkbox-box"></span>All
- </label>
+  
       </div>
       
   
