--- a/public/map.html
+++ b/public/map.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-<<<<<<< HEAD
     <title>Map</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -39,28 +38,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="stylesheets/style.css" />
-=======
-    <title>Geolocation</title>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-    <meta charset="utf-8">
-    <script
-  src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script>
-    <style>
-      /* Always set the map height explicitly to define the size of the div
-       * element that contains the map. */
-      #map {
-        height: 100%;
-      }
-      /* Optional: Makes the sample page fill the window. */
-      html, body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
-    </style>
->>>>>>> 5af325cb0d9df26c9718849427ce9f7250ee280d
   </head>
 
   <body>
@@ -69,14 +46,47 @@
         <nav class="nav links">
           <a class="nav-link" href="index.html"><i class="fas fa-home"></i></a>
           <a class="nav-link" href="/public/login.html">Login/Sign Up</a>
-          <a class="nav-link" href="/public/register.html"
-            >Register Your Business</a
-          >
+          <a class="nav-link" href="/public/register.html">Register Your Business</a>
         </nav>
       </div>
       <div class="col-12 map1">
-        <div id="map">
-
+        <div id="map"></div>
+        <div id="clicks">
+            <input type="checkbox" 
+            class="checkbox" 
+            id="retail"/>
+    <label for="checkbox-1" 
+           class="checkbox-click-target">
+      <span class="checkbox-box"></span>Retail
+    </label>
+       <input type="checkbox" 
+            class="checkbox" 
+            id="beauty"/>
+    <label for="checkbox-2" 
+           class="checkbox-click-target">
+      <span class="checkbox-box"></span>Beauty
+    </label>
+       <input type="checkbox" 
+            class="checkbox" 
+            id="restaurant" 
+    <label for="checkbox-3" 
+           class="checkbox-click-target">
+      <span class="checkbox-box"></span>Restaurant
+    </label>
+    <input type="checkbox" 
+            class="checkbox" 
+            id="grocery" 
+    <label for="checkbox-3" 
+           class="checkbox-click-target">
+      <span class="checkbox-box"></span>Grocery
+    </label>
+    <input type="checkbox" 
+            class="checkbox" 
+            id="all" 
+    <label for="checkbox-3" 
+           class="checkbox-click-target">
+      <span class="checkbox-box"></span>All
+    </label>
         </div>
       </div>
     </div>
@@ -93,15 +103,9 @@
       var address = "123 Main Street";
 
       function initMap() {
-<<<<<<< HEAD
         map = new google.maps.Map(document.getElementById("map"), {
           center: { lat: -34.397, lng: 150.644 },
           zoom: 6
-=======
-        map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: -34.397, lng: 150.644},
-          zoom: 11
->>>>>>> 5af325cb0d9df26c9718849427ce9f7250ee280d
         });
         infoWindow = new google.maps.InfoWindow();
 
@@ -129,7 +133,6 @@
         }
 
         //  Marker creator
-<<<<<<< HEAD
         function codeAddress(geocoder, map) {
           geocoder.geocode({ address: address }, function(results, status) {
             if (status === "OK") {
@@ -144,20 +147,6 @@
             }
           });
         }
-=======
-    //     
-    $.ajax("/api/beauty_address").done(function(data){
-        console.log("data", data)
-        data.forEach(function(address) {
-            var marker = new google.maps.Marker({
-                position: {lat: Number(address.lat), lng: Number(address.lng)},
-                map: map,
-                title: address.name
-            })
-        })
-    })
-
->>>>>>> 5af325cb0d9df26c9718849427ce9f7250ee280d
       }
 
       function handleLocationError(browserHasGeolocation, infoWindow, pos) {
@@ -177,4 +166,3 @@
     ></script>
   </body>
 </html>
-
