deleted second html page and added button function

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <h4>Search Local Businesses In Any City.</h4>
         <form>
           <input class="input" type="search" placeholder="City, State, Zip" />
-          <input class="submit" type="submit" value="Submit" />
+          <input class="submit" type="submit" value="Submit" id="state"/>
         </form>
         <input type="checkbox" class="checkbox" id="retail">
           <label for="checkbox-1" class="checkbox-click-target">
@@ -91,5 +91,6 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.0/gsap.min.js"></script>
     <script src="./style.js"></script>
+    <script src="./public/js/clickevent.js"></script>
   </body>
 </html>
