--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
 
       <div class="col-12 search">
         <h4>Search Local Businesses In Any City.</h4>
-        <form>
-          <input class="input" type="search" placeholder="Type In A City" />
+        <form action="public/map.html">
           <input class="submit" type="submit" value="Submit" id="city"/>
         </form>
 
@@ -72,6 +71,5 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.0/gsap.min.js"></script>
     <script src="./style.js"></script>
-    <script src="./public/js/clickevent.js"></script>
   </body>
 </html>
