working on linking pages

--- a/index.html
+++ b/index.html
@@ -41,23 +41,11 @@
       <div class="col-12 top">
         <nav class="nav links">
             <a class="nav-link" href="index.html"><i class="fas fa-home"></i></a>
-            <a class="nav-link" href="/login">Login/Sign Up</a>
+            <a class="nav-link" href="./public/login.html">Login/Sign Up</a>
             <a class="nav-link" href="./public/register.html">Register Your Business</a>
         </nav>
       </div>
 
-
-      <div class="col widget1">
-          <h3>Where Our<br />Neighbors Make:</h3>
-      </div>
-      <div class="col widget2">
-          <p>
-            <span class="word">Beauty Products</span>
-            <span class="word">Cocktails</span>
-            <span class="word">Food</span>
-            <span class="word">Fashion</span>
-          </p>
-      </div>
 
       <div class="col-12 search">
         <h4>Search Local Businesses In Any City.</h4>
@@ -65,7 +53,15 @@
           <input class="input" type="search" placeholder="Type In A City" />
           <input class="submit" type="submit" value="Submit" />
         </form>
+      </div>
+      <div class="col widget1">
+          <h3>Where Our Neighbors Make:
 
+            <span class="word">Beauty Products</span>
+            <span class="word">Cocktails</span>
+            <span class="word">Food</span>
+            <span class="word">Fashion</span>
+          </h3>
       </div>
     </div>
 
