--- a/public/login.html
+++ b/public/login.html
@@ -66,8 +66,8 @@
                   <input type="submit" class="button" value="Sign Up">
                 </form>
                 <div class="help-text">
-                  <p>By signing up, you agree to our</p>
-                  <p><a href="#">Terms of service</a></p>
+                  <!-- <p>By signing up, you agree to our</p>
+                  <p><a href="#">Terms of service</a></p> -->
                 </div>
               </div>
         
@@ -81,7 +81,7 @@
                   <input type="submit" class="button" value="Login">
                 </form><!--.login-form-->
                 <div class="help-text">
-                  <p><a href="#">Forget your password?</a></p>
+                  <!-- <p><a href="#">Forget your password?</a></p> -->
                 </div>
               </div>
             </div>
