connecting jaws db

--- a/index.html
+++ b/index.html
@@ -31,8 +31,14 @@
       src="https://kit.fontawesome.com/b1c2a0df1f.js"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="/public/js/clickevent.js"
+      crossorigin="anonymous"
+    ></script>
     <link href="https://fonts.googleapis.com/css?family=Lato:100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./public/stylesheets/style.css" />
+    
+
     <title>Nextdoor Neighbor</title>
   </head>
 
