--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
       <div class="col-12 search">
         <h4>Search Local Businesses In Any City.</h4>
         <form action="public/map.html">
-          <input class="submit" type="submit" value="Submit" id="city"/>
+          <!-- <input class="input" type="search" placeholder="Type in your city here!"/> -->
+          <input class="submit" type="submit" value="Get Started Here!" id="city"/>
         </form>
       </div>
       <div class="col widget1">
@@ -66,6 +67,7 @@
 
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.0/gsap.min.js"></script>
-    <script src="./style.js"></script>
+    <!-- <script src="./style.js"></script> -->
+    <script src="./public/js/clickevent.js"></script>
   </body>
 </html>
