--- a/public/map.html
+++ b/public/map.html
@@ -245,7 +245,7 @@
       }
     })
     function remRetail() {
-      for(i=0; i<retailArray[i]..length; i++){
+      for(i=0; i<retailArray[i].length; i++){
         retailArray[i].setMap(null)
       }
     }
