linked each html page

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     <div class="row box">
       <div class="col-12 top">
         <nav class="nav links">
-            <a class="nav-link" href="/home"><i class="fas fa-home"></i></a>
-            <a class="nav-link" href="/login">Login/Sign Up</a>
-            <a class="nav-link" href="/register">Register Your Business</a>
+          <a class="nav-link" href="index.html"><i class="fas fa-home"></i></a>
+          <a class="nav-link" href="./public/login.html">Login/Sign Up</a>
+          <a class="nav-link" href="./public/register.html">Register Your Business</a>
         </nav>
       </div>
 
