--- a/public/map.html
+++ b/public/map.html
@@ -56,8 +56,7 @@
             <input type="checkbox" 
             class="checkbox" 
             id="retail"
-            onClick="showRetail()"
-            value="Call function"
+          
             />
     <label for="checkbox-1" 
            class="checkbox-click-target">
@@ -268,7 +267,7 @@ $("#beauty").click(function(event) {
     showRestaurants()
   }
   else if (event.target.checked===true) {
-    remBeauty()
+    remRestaurants()
   }
 })
 function remRestaurants() {
