holy crap it works!!!

--- a/public/map.html
+++ b/public/map.html
@@ -37,7 +37,7 @@
       href="https://fonts.googleapis.com/css?family=Lato:100&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="stylesheets/style.css" />
+    <link rel="stylesheet" href="./stylesheets/style.css" />
 
   </head>
 
@@ -98,7 +98,7 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="js/login.js"></script>
+    <script type="text/javascript" src="./js/login.js"></script>
 
     <script>
       // Note: This example requires that you consent to location sharing when
