--- a/public/index.html
+++ b/public/index.html
@@ -35,8 +35,8 @@
       src="http://public/js/clickevent.js"
       crossorigin="anonymous"
     ></script> -->
-    <link href="https://fonts.googleapis.com/css?family=Lato:100&display=swap" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="./public/stylesheets/style.css" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Lato:100&display=swap" rel="stylesheet">
+    <link href="./stylesheets/style.css" rel="stylesheet">
     
 
     <title>Nextdoor Neighbor</title>
@@ -46,7 +46,7 @@
     <div class="row box">
       <div class="col-12 top">
         <nav class="nav links">
-            <a class="nav-link" href="/home"><i class="fas fa-home"></i></a>
+            <a class="nav-link" href="/"><i class="fas fa-home"></i></a>
             <a class="nav-link" href="/login">Login/Sign Up</a>
             <a class="nav-link" href="/register">Register Your Business</a>
         </nav>
@@ -72,6 +72,6 @@
 
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.0/gsap.min.js"></script>
-    <script src="style.js"></script>
+    <script src="./js/style.js"></script>
   </body>
 </html>
