--- a/public/register.html
+++ b/public/register.html
@@ -35,7 +35,7 @@
       crossorigin="anonymous"
     ></script>
     <link href="https://fonts.googleapis.com/css?family=Lato:100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="stylesheets/style.css" />
+    <link rel="stylesheet" href="./stylesheets/style.css" />
 </head>
 
 
@@ -43,7 +43,7 @@
         <div class="row box1">
                 <div class="col-12 top">
                   <nav class="nav links">
-                      <a class="nav-link" href="/home"><i class="fas fa-home"></i></a>
+                      <a class="nav-link" href="/"><i class="fas fa-home"></i></a>
                       <a class="nav-link" href="/login">Login/Sign Up</a>
                       <a class="nav-link" href="/register">Register Your Business</a>
                   </nav>
@@ -79,7 +79,7 @@
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript" src="js/login.js"></script>
+  <script type="text/javascript" src="./js/login.js"></script>
 
 </body>
 
