edited map link for live server use

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
 
       <div class="col-12 search">
         <h4>Search Local Businesses In Any City.</h4>
-        <form action="public/map.html">
+        <form action="./map.html">
           <input class="submit" type="submit" value="Submit" id="city"/>
         </form>
       </div>
