fixed front end color corrections-login box margins.

--- a/public/register.html
+++ b/public/register.html
@@ -64,29 +64,29 @@
 
         <div class="inputWithIcon">
           <input type="text" placeholder="Business Name" />
-          <i class="fa fa-envelope fa-lg fa-fw" aria-hidden="true"></i>
+          <i class="far fa-building fa-lg fa-fw" aria-hidden="true"></i>
         </div>
 
         <div class="inputWithIcon">
           <input type="text" placeholder="Address" />
-          <i class="fa fa-phone fa-lg fa-fw" aria-hidden="true"></i>
+          <i class="far fa-address-book fa-lg fa-fw" aria-hidden="true"></i>
         </div>
-
-        <div class="inputWithIcon inputIconBg">
+        
+        <div class="inputWithIcon">
           <input type="text" placeholder="City" />
-          <i class="fa fa-user fa-lg fa-fw" aria-hidden="true"></i>
+          <i class="fas fa-city fa-lg fa-fw" aria-hidden="true"></i>
         </div>
-        <div class="inputWithIcon inputIconBg">
+        <div class="inputWithIcon">
           <input type="text" placeholder="State" />
-          <i class="fa fa-user fa-lg fa-fw" aria-hidden="true"></i>
+          <i class="fas fa-flag-usa fa-lg fa-fw" aria-hidden="true"></i>
         </div>
-        <div class="inputWithIcon inputIconBg">
+        <div class="inputWithIcon">
           <input type="text" placeholder="Zip Code" />
-          <i class="fa fa-user fa-lg fa-fw" aria-hidden="true"></i>
+          <i class="fas fa-map-pin fa-lg fa-fw" aria-hidden="true"></i>
         </div>
-        <div class="inputWithIcon inputIconBg">
+        <div class="inputWithIcon">
           <input type="text" placeholder="Website" />
-          <i class="fa fa-user fa-lg fa-fw" aria-hidden="true"></i>
+          <i class="fas fa-desktop fa-fw" aria-hidden="true"></i>
         </div>
         <input class="submit" type="submit" value="Submit" />
       </div>
