--- a/public/index.html
+++ b/public/index.html
@@ -58,8 +58,8 @@
         <h4>Search Local Businesses In Any City.</h4>
 
         <form action="./map.html">
+          <input class="input" type="search" placeholder="Type In A City" />
           <input class="submit" type="submit" value="Submit" id="city"/>
-
         </form>
       </div>
       <div class="col widget1">
