--- a/public/map.html
+++ b/public/map.html
@@ -169,7 +169,7 @@
             var marker = new google.maps.Marker({
                 position: {lat: Number(address.lat), lng: Number(address.lng)},
                 map: map,
-                title: address.name
+                label: address.name
             })
             beautyArray.push(marker)
           
@@ -201,7 +201,7 @@
             var marker = new google.maps.Marker({
                 position: {lat: Number(address.lat), lng: Number(address.lng)},
                 map: map,
-                title: address.name
+                label: address.name
             })
             groceryArray.push(marker)
         })
@@ -231,7 +231,7 @@
             var marker = new google.maps.Marker({
                 position: {lat: Number(address.lat), lng: Number(address.lng)},
                 map: map,
-                title: address.name
+                label: address.name
             })
             retailArray.push(marker)
         })
@@ -259,7 +259,7 @@
             var marker = new google.maps.Marker({
                 position: {lat: Number(address.lat), lng: Number(address.lng)},
                 map: map,
-                title: address.name
+                label: address.name
             })
             restaurantsArray.push(marker)
         })
