Fixed front end and made it pretty

--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,7 @@
       src="https://kit.fontawesome.com/b1c2a0df1f.js"
       crossorigin="anonymous"
     ></script>
-    <!-- <script
-      src="http://public/js/clickevent.js"
-      crossorigin="anonymous"
-    ></script> -->
+    <link href="https://fonts.googleapis.com/css?family=Libre+Franklin&display=swap" rel="stylesheet">
     <link
       href="https://fonts.googleapis.com/css?family=Lato:100&display=swap"
       rel="stylesheet"
@@ -45,7 +42,7 @@
   </head>
 
   <body>
-    <div class="row box">
+    <div class="row box responsive">
       <div class="col-12 top">
         <nav class="nav links">
           <a class="nav-link" href="/"><i class="fas fa-home"></i></a>
@@ -63,9 +60,8 @@
         </form>
       </div>
       <div class="col widget1">
-        <h3>
+        <h3 class="widg">
           Where Our Neighbors Make:
-
           <span class="word">Beauty Products</span>
           <span class="word">Cocktails</span>
           <span class="word">Food</span>
