--- a/index.html
+++ b/index.html
@@ -31,19 +31,29 @@
       src="https://kit.fontawesome.com/b1c2a0df1f.js"
       crossorigin="anonymous"
     ></script>
-<<<<<<< HEAD
+    <<<<<<< HEAD
     <!-- <script
       src="http://public/js/clickevent.js"
       crossorigin="anonymous"
     ></script> -->
-    <link href="https://fonts.googleapis.com/css?family=Lato:100&display=swap" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="./public/stylesheets/style.css" type="text/css" />
-    
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:100&display=swap"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      rel="stylesheet"
+      href="./public/stylesheets/style.css"
+      type="text/css"
+    />
 
-=======
-    <link href="https://fonts.googleapis.com/css?family=Lato:100&display=swap" rel="stylesheet">
+    =======
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:100&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./public/stylesheets/style.css" />
->>>>>>> master
+    >>>>>>> master
     <title>Nextdoor Neighbor</title>
   </head>
 
@@ -53,36 +63,42 @@
         <nav class="nav links">
           <a class="nav-link" href="index.html"><i class="fas fa-home"></i></a>
           <a class="nav-link" href="./public/login.html">Login/Sign Up</a>
-          <a class="nav-link" href="./public/register.html">Register Your Business</a>
+          <a class="nav-link" href="./public/register.html"
+            >Register Your Business</a
+          >
         </nav>
       </div>
-
 
       <div class="col-12 search">
         <h4>Search Local Businesses In Any City.</h4>
         <form action="public/map.html">
           <!-- <input class="input" type="search" placeholder="Type in your city here!"/> -->
-          <input class="submit" type="submit" value="Get Started Here!" id="city"/>
+          <input
+            class="submit"
+            type="submit"
+            value="Get Started Here!"
+            id="city"
+          />
         </form>
       </div>
       <div class="col widget1">
-          <h3>Where Our Neighbors Make:
+        <h3>
+          Where Our Neighbors Make:
 
-            <span class="word">Beauty Products</span>
-            <span class="word">Cocktails</span>
-            <span class="word">Food</span>
-            <span class="word">Fashion</span>
-          </h3>
+          <span class="word">Beauty Products</span>
+          <span class="word">Cocktails</span>
+          <span class="word">Food</span>
+          <span class="word">Fashion</span>
+        </h3>
       </div>
     </div>
 
-    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.0/gsap.min.js"></script>
-<<<<<<< HEAD
+    <<<<<<< HEAD
     <script src="style.js"></script>
-=======
+    =======
     <!-- <script src="./style.js"></script> -->
     <script src="./public/js/clickevent.js"></script>
->>>>>>> master
+    >>>>>>> master
   </body>
 </html>
