first try at creating post for register button

--- a/public/register.html
+++ b/public/register.html
@@ -58,34 +58,34 @@
       </div>
       <div class="register-form">
         <div class="inputWithIcon">
-          <input type="text" placeholder="Name" />
+          <input type="text" placeholder="Name" id="name" />
           <i class="fa fa-user fa-lg fa-fw" aria-hidden="true"></i>
         </div>
 
         <div class="inputWithIcon">
-          <input type="text" placeholder="Business Name" />
+          <input type="text" placeholder="Business Name" id="businessName" />
           <i class="fa fa-envelope fa-lg fa-fw" aria-hidden="true"></i>
         </div>
 
         <div class="inputWithIcon">
-          <input type="text" placeholder="Address" />
+          <input type="text" placeholder="Address" id="address"/>
           <i class="fa fa-phone fa-lg fa-fw" aria-hidden="true"></i>
         </div>
 
         <div class="inputWithIcon inputIconBg">
-          <input type="text" placeholder="City" />
+          <input type="text" placeholder="City" id="city" />
           <i class="fa fa-user fa-lg fa-fw" aria-hidden="true"></i>
         </div>
         <div class="inputWithIcon inputIconBg">
-          <input type="text" placeholder="State" />
+          <input type="text" placeholder="State" id="state" />
           <i class="fa fa-user fa-lg fa-fw" aria-hidden="true"></i>
         </div>
         <div class="inputWithIcon inputIconBg">
-          <input type="text" placeholder="Zip Code" />
+          <input type="text" placeholder="Zip Code" id="zipCode" />
           <i class="fa fa-user fa-lg fa-fw" aria-hidden="true"></i>
         </div>
         <div class="inputWithIcon inputIconBg">
-          <input type="text" placeholder="Website" />
+          <input type="text" placeholder="Website" id="website" />
           <i class="fa fa-user fa-lg fa-fw" aria-hidden="true"></i>
         </div>
         <input class="submit" type="submit" value="Submit" />
@@ -93,6 +93,6 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="./js/login.js"></script>
+    <script type="text/javascript" src="./js/signup.js"></script>
   </body>
 </html>
