--- a/public/register.html
+++ b/public/register.html
@@ -93,6 +93,6 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="./js/signup.js"></script>
+    <script type="text/javascript" src="/public/js/register.js"></script>
   </body>
 </html>
