--- a/index.html
+++ b/index.html
@@ -91,6 +91,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.0/gsap.min.js"></script>
     <!-- <script src="./style.js"></script> -->
-    <script src="./public/js/clickevent.js"></script>
+    <script src="js/clickevent.js"></script>
   </body>
 </html>
