--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       crossorigin="anonymous"
     />
     <script
-      src="http://code.jquery.com/jquery-3.4.1.min.js"
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"></script>
     <script
