--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-      crossorigin="anonymous"></script>
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
       integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
@@ -31,18 +32,21 @@
       crossorigin="anonymous"
     ></script>
 
-    
-    <link href="https://fonts.googleapis.com/css?family=Lato:100&display=swap" rel="stylesheet">
-    <link href="./stylesheets/style.css" rel="stylesheet">
-    
-
-    <link href="https://fonts.googleapis.com/css?family=Libre+Franklin&display=swap" rel="stylesheet">
     <link
       href="https://fonts.googleapis.com/css?family=Lato:100&display=swap"
       rel="stylesheet"
     />
     <link href="./stylesheets/style.css" rel="stylesheet" />
 
+    <link
+      href="https://fonts.googleapis.com/css?family=Libre+Franklin&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:100&display=swap"
+      rel="stylesheet"
+    />
+    <link href="./stylesheets/style.css" rel="stylesheet" />
 
     <title>Nextdoor Neighbor</title>
   </head>
@@ -59,8 +63,8 @@
 
       <div class="col-12 search">
         <h4>Search Local Businesses In Any City.</h4>
-          <input class="input" type="search" placeholder="Type In A City"/>
-          <input class="submit" type="submit" value="Submit" id="city"/>
+        <input class="input" type="search" placeholder="Type In A City" />
+        <input class="submit" type="submit" value="Submit" id="city" />
       </div>
       <div class="col widget1">
         <h3 class="widg">
@@ -75,8 +79,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.0/gsap.min.js"></script>
     <script src="./js/style.js"></script>
-    <script
-      src="js/clickevent.js"
-    ></script>
+    <script src="js/clickevent.js"></script>
   </body>
 </html>
